Removing dump_unchecked and using more direct paths (#1141)
* dump unchecked

* more dump unchecked refactoring

* more dump unchecked cleanup

* to_json direct usage

* empty array optimization

* more to_json

* Update common.hpp

* Fixed reflection to_json use

* updates

* fix repe_test

* Attempt GCC fix

* Update gcc.yml

* Update gcc.yml

* Attempt GCC fix

* removed reflection_tuple

* Update cli_menu.hpp

--- a/.github/workflows/gcc.yml
+++ b/.github/workflows/gcc.yml
@@ -32,11 +32,11 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DCMAKE_CXX_STANDARD=${{matrix.std}}
+      run: |
+        CXXFLAGS="-g3" cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DCMAKE_CXX_STANDARD=${{matrix.std}}
 
     - name: Build
       run: cmake --build build -j $(nproc)
 
     - name: Test
-      working-directory: build
-      run: ctest -j $(nproc) --output-on-failure
+      run: ctest --output-on-failure --test-dir ${{github.workspace}}/build
