--- a/tests/socket_test/CMakeLists.txt
+++ b/tests/socket_test/CMakeLists.txt
@@ -2,7 +2,7 @@ project(socket_test)
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_common)
+target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_exceptions)
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 
