Add exhaustive float testing and tighten float fuzzer for denormals (#1207)
* add exhaustive test for roundtripping floats

* fix spelling in comment

* use threads instead of async

the async would hang for a minute or so on one of my systems,
use threads explicitly instead.

* rename github action for exhaustive int

* add github action for exhaustive float

* tighten floating point fuzzer to require denormals to roundtrip

--- a/.github/workflows/exhaustive_float.yml
+++ b/.github/workflows/exhaustive_float.yml
@@ -1,4 +1,4 @@
-name: exhaustive json tests
+name: exhaustive float json tests
 
 on:
   push:
@@ -47,13 +47,6 @@ jobs:
       working-directory: build
       run: |
         set -e
-        fuzzing/json_exhaustive_roundtrip_int
+        fuzzing/json_exhaustive_roundtrip_float
 
         echo all is OK!
-
-    - uses: actions/upload-artifact@v4
-      if: ${{ failure() }}
-      with:
-        name: fuzzing-artifacts
-        path: build/artifacts/
-
