Add GLAZE grouping for CMake options (#1232)
* Add GLAZE group for CMake options

* Update CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,8 +50,8 @@ if (glaze_DEVELOPER_MODE)
   include(cmake/dev-mode.cmake)
 endif()
 
-option(BUILD_EXAMPLES "Build examples" OFF)
+option(GLAZE_BUILD_EXAMPLES "Build GLAZE examples" OFF)
 
-if(BUILD_EXAMPLES)
+if(GLAZE_BUILD_EXAMPLES)
   add_subdirectory(examples)
 endif()
