--- a/tests/eigen_test/CMakeLists.txt
+++ b/tests/eigen_test/CMakeLists.txt
@@ -2,7 +2,7 @@ project(eigen_test)
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
 
-find_package (Eigen3 3.4 QUIET)
+find_package (Eigen3 3.4 QUIET NO_MODULE)
 if(NOT Eigen3_FOUND)
   FetchContent_Declare(
     Eigen3
@@ -12,8 +12,9 @@ if(NOT Eigen3_FOUND)
   )
   FetchContent_MakeAvailable(Eigen3)
   # Exclude Eigen tests from being run by default
-  set_target_properties(Eigen3::Eigen PROPERTIES EXCLUDE_FROM_ALL TRUE)
-endif()
+  set(BUILD_TESTING OFF)
+  set(EIGEN_BUILD_TESTING OFF)
+  endif()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_common Eigen3::Eigen)
 
