Adding CLI argument parser

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -55,6 +55,7 @@ endif()
 add_subdirectory(asio_repe)
 add_subdirectory(api_test)
 add_subdirectory(binary_test)
+add_subdirectory(cli_args_test)
 add_subdirectory(cli_menu_test)
 add_subdirectory(compare_test)
 add_subdirectory(csv_test)
