Adding bmi2 instruction set testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,16 @@ target_include_directories(
     INTERFACE "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
 )
 
+if(APPLE)
+    option(glaze_ENABLE_BMI2 "Enable BMI2 instruction set" OFF)
+else()
+    option(glaze_ENABLE_BMI2 "Enable BMI2 instruction set" ON)
+endif()
+
+if(glaze_ENABLE_BMI2)
+  include(cmake/check-bmi2.cmake)
+endif()
+
 if(NOT CMAKE_SKIP_INSTALL_RULES)
   include(cmake/install-rules.cmake)
 endif()
