--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -54,7 +54,7 @@ endif()
 
 add_subdirectory(asio_repe)
 add_subdirectory(api_test)
-add_subdirectory(binary_test)
+add_subdirectory(beve_test)
 add_subdirectory(cli_menu_test)
 add_subdirectory(compare_test)
 add_subdirectory(csv_test)
