New integer parsing

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -60,6 +60,7 @@ add_subdirectory(compare_test)
 add_subdirectory(csv_test)
 add_subdirectory(eigen_test)
 add_subdirectory(exceptions_test)
+add_subdirectory(int_parsing)
 add_subdirectory(json_conformance)
 add_subdirectory(json_performance)
 add_subdirectory(json_test)
