--- a/tests/asio_repe/CMakeLists.txt
+++ b/tests/asio_repe/CMakeLists.txt
@@ -11,5 +11,7 @@ if(NOT asio_POPULATED)
     FetchContent_Populate(asio)
 endif()
 
-add_subdirectory(server)
-add_subdirectory(client)
+add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
+
+target_include_directories(${PROJECT_NAME} PRIVATE include ${asio_SOURCE_DIR}/asio/include)
+target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_exceptions)
