GLZ_TEST_FORMAT macro and first test

--- a/tests/roundtrip/CMakeLists.txt
+++ b/tests/roundtrip/CMakeLists.txt
@@ -2,6 +2,8 @@ project(roundtrip)
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
 
+target_compile_definitions(${PROJECT_NAME} PRIVATE GLZ_TEST_FORMAT=glz::JSON)
+
 target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_common)
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
