--- a/tests/roundtrip/CMakeLists.txt
+++ b/tests/roundtrip/CMakeLists.txt
@@ -1,11 +1,16 @@
 project(roundtrip)
 
-add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
+function(add_roundtrip_executable FORMAT)
+    set(EXE_NAME "${PROJECT_NAME}_${FORMAT}")
+    add_executable(${EXE_NAME} ${PROJECT_NAME}.cpp)
+    target_compile_definitions(${EXE_NAME} PRIVATE GLZ_TEST_FORMAT=glz::${FORMAT})
+    target_link_libraries(${EXE_NAME} PRIVATE glz_test_common)
+    add_test(NAME ${EXE_NAME} COMMAND ${EXE_NAME})
+    set_tests_properties(${EXE_NAME} PROPERTIES LABELS "format_${FORMAT}")
+endfunction()
 
-target_compile_definitions(${PROJECT_NAME} PRIVATE GLZ_TEST_FORMAT=glz::JSON)
+set(SUPPORTED_FORMATS JSON BEVE)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_common)
-
-add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
-
-target_code_coverage(${PROJECT_NAME} AUTO ALL)
+foreach(FORMAT IN LISTS SUPPORTED_FORMATS)
+    add_roundtrip_executable(${FORMAT})
+endforeach()
