--- a/.github/workflows/clang-linux.yml
+++ b/.github/workflows/clang-linux.yml
@@ -6,11 +6,12 @@ on:
       - main
       - feature/*
     paths-ignore:
-      - '**.md'
+      - '**/*.md'
   pull_request:
-    branches: [main]
+    branches:
+      - main
     paths-ignore:
-      - '**.md'
+      - '**/*.md'
   workflow_dispatch:
 
 jobs:
