--- a/.github/workflows/gcc-x86.yml
+++ b/.github/workflows/gcc-x86.yml
@@ -7,11 +7,13 @@ on:
       - feature/*
     paths-ignore:
       - '**/*.md'
+      - 'docs/**'
   pull_request:
     branches:
       - main
     paths-ignore:
       - '**/*.md'
+      - 'docs/**'
   workflow_dispatch:
 
 jobs:
