Type "cls" or "clear" to bring the menu to the front (#1409)
* Type "cls" or "clear" to bring the menu to the front

* Update cli-menu.md

* Fix workflow alignment?

* Update cli-menu.md

* Don't run workflows for markdown file commits

* Update cli-menu.md

* explicitly ignore docs folder

* Create mustache.md

--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -3,9 +3,10 @@ name: clang-format
 on: 
   push:
     branches:
-    - main
+      - main
     paths-ignore:
-    - '**.md'
+      - '**/*.md'
+      - 'docs/**'
   workflow_dispatch:
 
 jobs:
