--- a/.github/workflows/gcc-x86.yml
+++ b/.github/workflows/gcc-x86.yml
@@ -1,17 +1,20 @@
 name: gcc-x86
 
 on:
-   push:
-      branches:
-         - main
-         - feature/*
-      paths-ignore:
-         - "**.md"
-   pull_request:
-      branches: [main]
-      paths-ignore:
-         - "**.md"
-   workflow_dispatch:
+  push:
+    branches:
+      - main
+      - feature/*
+    paths-ignore:
+      - '**/*.md'
+      - 'docs/**'
+  pull_request:
+    branches:
+      - main
+    paths-ignore:
+      - '**/*.md'
+      - 'docs/**'
+  workflow_dispatch:
 
 jobs:
    build:
