--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -4,13 +4,16 @@ on:
   push:
     branches:
       - main
-      - 'feature/*'
+      - feature/*
     paths-ignore:
-      - '**.md'
+      - '**/*.md'
+      - 'docs/**'
   pull_request:
-    branches: [main]
+    branches:
+      - main
     paths-ignore:
-      - '**.md'
+      - '**/*.md'
+      - 'docs/**'
   workflow_dispatch:
 
 env:
