--- a/.github/workflows/msys2.yml
+++ b/.github/workflows/msys2.yml
@@ -3,10 +3,11 @@ name: msys2-mingw
 on:
   push:
     branches:
-    - main
-    - feature/*
+      - main
+      - feature/*
     paths-ignore:
-    - '**.md'
+      - '**/*.md'
+      - 'docs/**'
   workflow_dispatch:
 
 env:
