--- a/tests/csv_test/CMakeLists.txt
+++ b/tests/csv_test/CMakeLists.txt
@@ -8,6 +8,10 @@ if (MINGW)
     target_compile_options(${PROJECT_NAME} PRIVATE "-Wa,-mbig-obj")
 endif ()
 
+target_compile_definitions(${PROJECT_NAME} PRIVATE 
+    GLZ_TEST_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}"
+)
+
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 
 target_code_coverage(${PROJECT_NAME} AUTO ALL)
