--- a/tests/reflection/CMakeLists.txt
+++ b/tests/reflection/CMakeLists.txt
@@ -1,12 +1,8 @@
-project(reflection_test)
+project(reflection)
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_common)
-
-if (MINGW)
-    target_compile_options(${PROJECT_NAME} PRIVATE "-Wa,-mbig-obj")
-endif ()
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 
