--- a/.github/workflows/clang-linux.yml
+++ b/.github/workflows/clang-linux.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        clang: [16, 17, 18]
+        clang: [17, 18]
         build_type: [Debug]
         std: [23]
 
