--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -59,6 +59,7 @@ add_subdirectory(cli_menu_test)
 add_subdirectory(compare_test)
 add_subdirectory(csv_test)
 add_subdirectory(eigen_test)
+add_subdirectory(example_json)
 add_subdirectory(exceptions_test)
 add_subdirectory(int_parsing)
 add_subdirectory(json_conformance)
