--- a/.github/workflows/quickfuzz.yml
+++ b/.github/workflows/quickfuzz.yml
@@ -36,8 +36,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo echo apt-get update
-        sudo echo apt-get install -y libc++-dev libc++abi-dev
+        sudo apt-get update
+        sudo apt-get install -y libc++-dev libc++abi-dev
 
     - name: Configure CMake
       run: |
