JMESPath compile time and runtime path support

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -62,6 +62,7 @@ add_subdirectory(eigen_test)
 add_subdirectory(example_json)
 add_subdirectory(exceptions_test)
 add_subdirectory(int_parsing)
+add_subdirectory(jmespath)
 add_subdirectory(json_conformance)
 add_subdirectory(json_performance)
 add_subdirectory(json_reflection_test)
