--- a/tests/stencil/CMakeLists.txt
+++ b/tests/stencil/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(stencil_test)
 
-add_compile_definitions(CURRENT_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}")
+add_compile_definitions(GLZ_TEST_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}")
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
 
