--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,10 +50,10 @@ if (glaze_DEVELOPER_MODE)
   include(cmake/dev-mode.cmake)
 endif()
 
-option(glaze_DISABLE_AVX2_WHEN_SUPPORTED
-       "disable AVX2 optimized code even when targets supports it" OFF)
-if(glaze_DISABLE_AVX2_WHEN_SUPPORTED)
-  target_compile_definitions(glaze_glaze INTERFACE GLZ_DISABLE_AVX2)
+option(glaze_DISABLE_SIMD_WHEN_SUPPORTED
+       "disable SIMD optimizations even when targets support it (e.g. AVX2)" OFF)
+if(glaze_DISABLE_SIMD_WHEN_SUPPORTED)
+  target_compile_definitions(glaze_glaze INTERFACE GLZ_DISABLE_SIMD)
 endif()
 
 option(glaze_BUILD_EXAMPLES "Build GLAZE examples" OFF)
