--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,15 +50,10 @@ if (glaze_DEVELOPER_MODE)
   include(cmake/dev-mode.cmake)
 endif()
 
-if (APPLE)
-  option(glaze_ENABLE_AVX2 "Enable AVX2 instruction set" OFF)
-else()
-  option(glaze_ENABLE_AVX2 "Enable AVX2 instruction set" ON)
-  message("Glaze is being compiled with AVX2 instructions. Set glaze_ENABLE_AVX2 to OFF if you wish to disable this.")
-endif()
-
-if (glaze_ENABLE_AVX2)
-  include(cmake/avx.cmake)
+option(glaze_DISABLE_SIMD_WHEN_SUPPORTED
+       "disable SIMD optimizations even when targets support it (e.g. AVX2)" OFF)
+if(glaze_DISABLE_SIMD_WHEN_SUPPORTED)
+  target_compile_definitions(glaze_glaze INTERFACE GLZ_DISABLE_SIMD)
 endif()
 
 option(glaze_BUILD_EXAMPLES "Build GLAZE examples" OFF)
