Remove glz::expected and always use std::expected (#1314)
* Removed glaze expected implementation

* Use -stdlib=libc++

* Update quickfuzz.yml

--- a/.github/workflows/quickfuzz.yml
+++ b/.github/workflows/quickfuzz.yml
@@ -36,8 +36,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo echo apt-get update
-        sudo echo apt-get install -y libc++-dev libc++abi-dev
+        sudo apt-get update
+        sudo apt-get install -y libc++-dev libc++abi-dev
 
     - name: Configure CMake
       run: |
@@ -46,6 +46,7 @@ jobs:
           -DCMAKE_CXX_STANDARD=${{matrix.std}} \
           -DCMAKE_C_COMPILER=${{env.CC}} \
           -DCMAKE_CXX_COMPILER=${{env.CXX}} \
+          -DCMAKE_CXX_FLAGS="-stdlib=libc++" \
           -DBUILD_TESTING=Off
 
     - name: Build
