Remove FetchContent_GetProperties

--- a/tests/eigen_test/CMakeLists.txt
+++ b/tests/eigen_test/CMakeLists.txt
@@ -10,9 +10,10 @@ if(NOT Eigen3_FOUND)
     GIT_TAG 3.4.0
     GIT_SHALLOW TRUE
   )
-  FetchContent_GetProperties(Eigen3)
-  if(NOT eigen3_POPULATED)
-    FetchContent_Populate(Eigen3)
+  
+  FetchContent_MakeAvailable(Eigen3)
+  
+  if(NOT TARGET Eigen3::Eigen)
     add_library(Eigen3 INTERFACE IMPORTED GLOBAL)
     add_library(Eigen3::Eigen ALIAS Eigen3)
     target_include_directories(Eigen3 INTERFACE "${eigen3_SOURCE_DIR}")
