Rename ERLANG -> EETF

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,9 +62,9 @@ if(glaze_BUILD_EXAMPLES)
   add_subdirectory(examples)
 endif()
 
-option(glaze_ERLANG_FORMAT "Enable Erlang external term format parsing" OFF)
+option(glaze_EETF_FORMAT "Enable Erlang external term format parsing" OFF)
 
-if(glaze_ERLANG_FORMAT)
+if(glaze_EETF_FORMAT)
   list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
   find_package(Erlang REQUIRED)
   target_link_libraries(
@@ -74,4 +74,4 @@ if(glaze_ERLANG_FORMAT)
       Erlang::Erlang
   )
   target_compile_definitions(glaze_glaze INTERFACE GLZ_ENABLE_EETF)
-endif(glaze_ERLANG_FORMAT)
+endif(glaze_EETF_FORMAT)
