--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -80,6 +80,9 @@ add_subdirectory(stencil)
 add_subdirectory(threading_test)
 add_subdirectory(toml_test)
 add_subdirectory(utility_formats)
+if(glaze_EETF_FORMAT)
+    add_subdirectory(eetf_test)
+endif(glaze_EETF_FORMAT)
 
 # We don't run find_package_test or glaze-install_test with MSVC/Windows, because the Github action runner often chokes
 # Don't run find_package on Clang, because Linux runs with Clang try to use GCC standard library and have errors before Clang 18
@@ -111,6 +114,8 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
     "-Dglaze_ROOT:PATH=${CMAKE_CURRENT_BINARY_DIR}/install"
     "-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
     "-DBUILD_TESTING=ON"
+    "$<$<BOOL:${glaze_EETF_FORMAT}>:-Dglaze_EETF_FORMAT=ON>"
+    "$<$<BOOL:${glaze_EETF_FORMAT}>:-DEXTERNAL_MODULE_PATH=${PROJECT_SOURCE_DIR}/cmake>"
     --test-command "${CMAKE_CTEST_COMMAND}" --verbose --output-on-failure # inner ctest command
     )
 
