Add json support for inplace_vector

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -64,6 +64,7 @@ add_subdirectory(csv_test)
 add_subdirectory(eigen_test)
 add_subdirectory(example_json)
 add_subdirectory(exceptions_test)
+add_subdirectory(inplace_vector)
 add_subdirectory(int_parsing)
 add_subdirectory(jmespath)
 add_subdirectory(json_conformance)
