--- a/tests/inplace_vector/CMakeLists.txt
+++ b/tests/inplace_vector/CMakeLists.txt
@@ -1,18 +1,7 @@
 project(inplace_vector_test)
 
-include(FetchContent)
-
-FetchContent_Declare(
-  inplace_vector
-  GIT_REPOSITORY https://github.com/bemanproject/inplace_vector.git
-  GIT_TAG main
-  GIT_SHALLOW TRUE
-)
-
-FetchContent_MakeAvailable(inplace_vector)
-
 add_executable(${PROJECT_NAME} inplace_vector_test.cpp)
-target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_exceptions beman::inplace_vector)
+target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_exceptions)
 
 if (MINGW)
     target_compile_options(${PROJECT_NAME} PRIVATE "-Wa,-mbig-obj")
