--- a/.github/workflows/gcc-linux-latest.yml
+++ b/.github/workflows/gcc-linux-latest.yml
@@ -1,5 +1,4 @@
 name: gcc-linux-latest
-# This workflow sets up and tests with the latest GCC (15)
 
 on:
   push:
@@ -34,25 +33,17 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install dependencies
+    - name: Add Ubuntu Toolchain Test PPA and Install GCC 15
       run: |
-        sudo apt update
-        sudo apt install -y build-essential libgmp-dev libmpfr-dev libmpc-dev flex bison wget
+        sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+        sudo apt-get update
+        sudo apt-get install -y gcc-15 g++-15
 
-    - name: Download and extract GCC 15.1
+    - name: Set GCC 15 as Default
       run: |
-        wget https://ftp.gnu.org/gnu/gcc/gcc-15.1.0/gcc-15.1.0.tar.gz
-        tar -xzf gcc-15.1.0.tar.gz
-        mkdir gcc-15.1.0/build
-        cd gcc-15.1.0/build
-        ../configure --prefix=/opt/gcc-15.1 --enable-languages=c,c++ --disable-multilib
-        make -j$(nproc)
-        sudo make install
-
-    - name: Set GCC 15 as default
-      run: |
-        sudo update-alternatives --install /usr/bin/gcc gcc /opt/gcc-15.1/bin/gcc 100
-        sudo update-alternatives --install /usr/bin/g++ g++ /opt/gcc-15.1/bin/g++ 100
+        sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-15 100 \
+                                 --slave /usr/bin/g++ g++ /usr/bin/g++-15
+        sudo update-alternatives --set gcc /usr/bin/gcc-15
         gcc --version
         g++ --version
 
