--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,28 +68,41 @@ nav:
   - Getting Started:
     - Installation: installation.md
     - Quick Start: quick-start.md
-  - Core Features:
-    - JSON Handling: json.md
-    - Binary (BEVE): binary.md
-    - CSV Support: csv.md
-    - Options: options.md
+    - Compile Time Options: options.md
+    - Generic JSON: generic-json.md
+  - Reflection:
+    - Pure Reflection: pure-reflection.md
+  - Formats:
+    - JSON: json.md
+    - CSV: csv.md
+    - BEVE (binary): binary.md
+    - Stencil/Mustache String Interpolation: stencil.md
+    - EETF: EETF/erlang-external-term-format.md
+  - Advanced Serialization/Parsing:
+    - Exceptions: exceptions.md
     - Wrappers: wrappers.md
-  - Advanced Topics:
+    - Custom Wrappers: custom-wrappers.md
     - Custom Serialization: custom-serialization.md
     - Variant Handling: variant-handling.md
     - Unknown Keys: unknown-keys.md
     - JSON Pointer Syntax: json-pointer-syntax.md
     - JMESPath: JMESPath.md
+    - JSON Schema: json-schema.md
     - Partial Read/Write:
       - Partial Read: partial-read.md
       - Partial Write: partial-write.md
-    - Exceptions: exceptions.md
+    - Max Float Precision: max-float-precision.md
+    - Ranges: ranges.md
+  - Interface Utilities:
     - JSON Include: json-include.md
     - CLI Menu: cli-menu.md
     - Glaze Interfaces: glaze-interfaces.md
-  - Formats:
-    - EETF: EETF/erlang-external-term-format.md
-    - Generic JSON: generic-json.md
+  - Data Recording/Logging:
+    - Time Trace Profiles: time-trace.md
+    - Data Recorder: recorder.md
+  - Threading:
+    - Thread Pool: thread-pool.md
+    - Volatile Support: volatile-support.md
   - FAQ: FAQ.md
 
 extra:
