--- a/tests/reflection/enum_reflection/CMakeLists.txt
+++ b/tests/reflection/enum_reflection/CMakeLists.txt
@@ -1,9 +1,7 @@
-project(reflection)
+project(enum_reflection)
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_common)
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
-
-add_subdirectory(enum_reflection)
