--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,6 +70,7 @@ nav:
    - Quick Start: quick-start.md
    - Compile Time Options: options.md
    - Optimizing Performance: optimizing-performance.md
+   - Rename Keys: rename-keys.md
    - Generic JSON: generic-json.md
  - Reflection:
    - Pure Reflection: pure-reflection.md
