TLS support with OpenSSL

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -66,21 +66,26 @@ add_subdirectory(example_json)
 add_subdirectory(exceptions_test)
 add_subdirectory(int_parsing)
 add_subdirectory(jmespath)
-add_subdirectory(json_conformance)
-add_subdirectory(json_performance)
-add_subdirectory(json_reflection_test)
-add_subdirectory(json_test)
 add_subdirectory(jsonrpc_test)
 add_subdirectory(lib_test)
 add_subdirectory(mock_json_test)
-add_subdirectory(repe_test)
-add_subdirectory(rest_test)
 add_subdirectory(reflection)
 add_subdirectory(roundtrip)
 add_subdirectory(stencil)
 add_subdirectory(threading_test)
 add_subdirectory(toml_test)
 add_subdirectory(utility_formats)
+
+# JSON Tests
+add_subdirectory(json_conformance)
+add_subdirectory(json_performance)
+add_subdirectory(json_reflection_test)
+add_subdirectory(json_test)
+
+# Networking Tests
+add_subdirectory(https_test)
+add_subdirectory(repe_test)
+add_subdirectory(rest_test)
 add_subdirectory(websocket_test)
 
 if(glaze_EETF_FORMAT)
